Fix button spacing

--- a/week3/statePractice/src/counter-styles.css
+++ b/week3/statePractice/src/counter-styles.css
@@ -29,7 +29,7 @@
 	justify-content: center;
 	padding: 5px 10px;
 	transition: transform 0.1s ease;
-	width: calc(50% - 10px);
+	width: calc(50% - 5px);
 }
 
 .counter .button:hover {
